--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-pytorch-lightning >= 1.0.0rc2
-torch >= 1.3.0
-torchvision >= 0.6.0
+pytorch-lightning == 1.2.8
+torch == 1.8.0
+torchvision == 0.9.0
 timm==0.3.4
 PyYAML==5.4.1
 pytest==6.2.2
